syntax = "proto3";

package userservice;

option go_package = "./;pb";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse) {}
  rpc ConfirmUser(ConfirmUserRequest) returns (ConfirmUserResponse) {}
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse) {}
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  User result = 1;
}

message ConfirmUserRequest {
  string email = 1;
}

message ConfirmUserResponse {}

message GetUserByIDRequest {
  string id = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string email = 5;
  string password = 6;
  bool is_confirmed = 7;
}

